; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/msp430/extr_msp430_disas.c_remove_second_operand.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/msp430/extr_msp430_disas.c_remove_second_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msp430_cmd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.msp430_cmd*)* @remove_second_operand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_second_operand(%struct.msp430_cmd* %0) #0 {
  %2 = alloca %struct.msp430_cmd*, align 8
  store %struct.msp430_cmd* %0, %struct.msp430_cmd** %2, align 8
  %3 = load %struct.msp430_cmd*, %struct.msp430_cmd** %2, align 8
  %4 = getelementptr inbounds %struct.msp430_cmd, %struct.msp430_cmd* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i8* @strchr(i32 %5, i8 signext 44)
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.msp430_cmd*, %struct.msp430_cmd** %2, align 8
  %10 = getelementptr inbounds %struct.msp430_cmd, %struct.msp430_cmd* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i8* @strchr(i32 %11, i8 signext 44)
  store i8 0, i8* %12, align 1
  br label %13

13:                                               ; preds = %8, %1
  ret void
}

declare dso_local i8* @strchr(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
